feat: add multi-place harness and installation playbooks

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robloxstudio-mcp",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "description": "MCP Server for Roblox Studio Integration - Access Studio data, scripts, and objects through AI tools",
   "main": "dist/index.js",
   "type": "module",
@@ -16,6 +16,24 @@
     "build": "tsc",
     "build:plugin": "node scripts/build-plugin.mjs",
     "build:all": "npm run build && npm run build:plugin",
+    "places": "node scripts/places.mjs",
+    "place:detect": "node scripts/places.mjs detect --init-if-missing --set-active",
+    "place:list": "node scripts/places.mjs list",
+    "place:status": "node scripts/places.mjs status",
+    "blueprint:doctor": "node scripts/blueprint-doctor.mjs",
+    "blueprint:sync": "node scripts/sync-roblox-properties.mjs",
+    "blueprint:watch": "node scripts/watch-roblox-properties.mjs",
+    "blueprint:reverse-sync": "node scripts/reverse-sync-rojo.mjs",
+    "push:fast": "node scripts/push-script-fast.mjs",
+    "push:diff": "node scripts/push-script-diff.mjs",
+    "apply:verify": "node scripts/apply-verify.mjs",
+    "drift:check": "node scripts/check-drift.mjs",
+    "lint:deprecated": "node scripts/lint-deprecated-apis.mjs",
+    "dev:cockpit": "node scripts/dev-cockpit.mjs",
+    "dev:studio": "node scripts/dev-studio.mjs --with-rojo --with-watch --with-reverse",
+    "telemetry:once": "node scripts/telemetry-dashboard.mjs --once",
+    "telemetry:watch": "node scripts/telemetry-dashboard.mjs",
+    "test:live": "node scripts/live-smoke.mjs",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
