feat: upgrade speed sim and add official luau lint toolchain

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "apply:verify": "node scripts/apply-verify.mjs",
     "drift:check": "node scripts/check-drift.mjs",
     "lint:deprecated": "node scripts/lint-deprecated-apis.mjs",
+    "luau:install": "node scripts/install-luau-cli.mjs",
+    "luau:lint": "node scripts/luau-lint.mjs",
+    "luau:lint:strict": "node scripts/luau-lint.mjs --strict --fail-on-findings",
     "dev:cockpit": "node scripts/dev-cockpit.mjs",
     "dev:studio": "node scripts/dev-studio.mjs --with-rojo --with-watch --with-reverse",
     "telemetry:once": "node scripts/telemetry-dashboard.mjs --once",
