--- a/blueprint-v1/default.project.json
+++ b/blueprint-v1/default.project.json
@@ -2,8 +2,17 @@
   "name": "RobloxGameBlueprintV1",
   "tree": {
     "$className": "DataModel",
+    "Workspace": {
+      "$path": "src/Workspace"
+    },
+    "Lighting": {
+      "$path": "src/Lighting"
+    },
     "ReplicatedStorage": {
       "$path": "src/ReplicatedStorage"
+    },
+    "ReplicatedFirst": {
+      "$path": "src/ReplicatedFirst"
     },
     "ServerScriptService": {
       "$path": "src/ServerScriptService"
@@ -11,16 +20,28 @@
     "ServerStorage": {
       "$path": "src/ServerStorage"
     },
+    "StarterGui": {
+      "$path": "src/StarterGui"
+    },
     "StarterPlayer": {
+      "StarterCharacterScripts": {
+        "$path": "src/StarterPlayer/StarterCharacterScripts"
+      },
       "StarterPlayerScripts": {
         "$path": "src/StarterPlayer/StarterPlayerScripts"
       }
     },
-    "StarterGui": {
-      "$path": "src/StarterGui"
+    "StarterPack": {
+      "$path": "src/StarterPack"
     },
-    "Workspace": {
-      "$path": "src/Workspace"
+    "Teams": {
+      "$path": "src/Teams"
+    },
+    "SoundService": {
+      "$path": "src/SoundService"
+    },
+    "TextChatService": {
+      "$path": "src/TextChatService"
     }
   }
 }
