--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "robloxstudio-mcp",
+  "name": "@aaronaalmendarez/roblox-mcp",
   "version": "1.10.0",
   "description": "MCP Server for Roblox Studio Integration - Access Studio data, scripts, and objects through AI tools",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
-    "robloxstudio-mcp": "dist/index.js"
+    "roblox-mcp": "dist/index.js"
   },
   "files": [
     "dist/**/*",
@@ -60,11 +60,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/boshyxd/robloxstudio-mcp.git"
+    "url": "https://github.com/aaronaalmendarez/roblox-mcp.git"
   },
-  "homepage": "https://github.com/boshyxd/robloxstudio-mcp#readme",
+  "homepage": "https://github.com/aaronaalmendarez/roblox-mcp#readme",
   "bugs": {
-    "url": "https://github.com/boshyxd/robloxstudio-mcp/issues"
+    "url": "https://github.com/aaronaalmendarez/roblox-mcp/issues"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
