docs: align README and package scope with published npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aaronaalmendarez/roblox-mcp",
+  "name": "@aaronalm19/roblox-mcp",
   "version": "1.10.0",
   "description": "MCP Server for Roblox Studio Integration - Access Studio data, scripts, and objects through AI tools",
   "main": "dist/index.js",
